<?xml version="1.0"?>
<package format="2">
  <name>pose_graph_visualizer</name>
  <version>0.0.0</version>
  <description>Visualization of a SE3 pose graph</description>

  <maintainer email="beat.scherrer@gmail.com">Beat Scherrer</maintainer>


  <license>TODO</license>


  <author email="beat.scherrer@gmail.com">Beat Scherrer</author>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pose_graph_visualizer_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
